[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imgprep"
version = "0.1.0"
description = "图像预处理工具库 —— 读图、通道转换、亮度增强、高斯/椒盐噪声、运动模糊"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "VanlenFrank", email = "valenfrank@users.noreply.github.com"},
]
keywords = ["image", "preprocessing", "augmentation", "computer-vision", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/VanlenFrank/data-augmentation"
Repository = "https://github.com/VanlenFrank/data-augmentation"
BugTracker = "https://github.com/VanlenFrank/data-augmentation/issues"

[tool.setuptools.packages.find]
include = ["imgprep*"]
